welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:9: error: ';' expected but 'else' found.
    } else{
      ^ColumnByColumn:14: error: Missing closing brace `}' assumed here
} 
^